--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 mongo_uri = mongodb+srv://ajaybhagel1117:1234@cluster0.9bgzo3c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 secret = dhoomMachale
+PORT = 3000
